[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "graphs_bonkfairy"
version = "0.1.0"
authors = [
  { name="S Holton"},
]
description = "A Python library implementing Dijkstra's shortest path algorithm and other graph algorithms"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/bonkfairy/graphs_bonkfairy"
"Bug Tracker" = "https://github.com/bonkfairy/graphs_bonkfairy/issues"